# memento

./: .gitignore  default.nix  memento.cabal  shell.nix
main/: Main.hs
main/Memento/: CLI.hs  Commands.hs
src/Memento/: Config.hs  GoogleCalendar.hs  HipChat.hs  Logger.hs  Types.hs
