name:                memento
version:             0.1.0.0
synopsis:            Do Stuff. Now. Please.
license:             MIT
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
category:            System
build-type:          Simple
-- extra-source-files:  
cabal-version:       >= 1.14

executable memento
  hs-source-dirs:
    main
  main-is:
    Main.hs
  other-modules:
    Memento.CLI
  -- other-extensions:    
  build-depends:
                base >= 4.6 && < 5
              , iCalendar
              , ansi-terminal
              , optparse-applicative >= 0.11.0
              , http-client >= 0.3.8.2
              , data-default
  -- hs-source-dirs:      
  default-language:    Haskell2010