name:                memento
version:             0.1.0.0
synopsis:            Do Stuff. Now. Please.
license:             MIT
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
category:            System
build-type:          Simple
cabal-version:       >= 1.14

library
  hs-source-dirs:
    src
  exposed-modules:
    Memento.HipChat
    Memento.GoogleCalendar

  build-depends:
      base >= 4.6 && < 5
    , iCalendar
    , ansi-terminal
    , optparse-applicative >= 0.11.0
    , http-client >= 0.3.8.2
    , http-types
    , data-default
    , time
    , text
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings

executable memento
  hs-source-dirs:
    main
  main-is:
    Main.hs
  other-modules:
    Memento.CLI
  build-depends:
      base
    , iCalendar
    , ansi-terminal
    , optparse-applicative
    , http-client
    , http-types
    , data-default
    , time
    , text
  default-language:    Haskell2010
