name:                memento
version:             0.1.0.0
synopsis:            Do Stuff. Now. Please.
license:             MIT
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
category:            System
build-type:          Simple
cabal-version:       >= 1.14

library
  hs-source-dirs:
    src
  exposed-modules:
    Memento.Config
    Memento.Logger
    Memento.HipChat
    Memento.GoogleCalendar
    Memento.Types

  build-depends:
      base >= 4.6 && < 5
    , aeson >= 0.7.0.0
    , configurator
    , iCalendar
    , ansi-terminal
    , optparse-applicative >= 0.11.0
    , old-locale
    , http-client >= 0.3.8.2
    , http-types
    , http-client-tls >= 0.2.2
    , data-default
    , raw-strings-qq
    , shelly >= 1.5.0.0
    , mtl
    , time
    , text
    , configurator
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings

executable memento
  hs-source-dirs:
    main
  main-is:
    Main.hs
  other-modules:
    Memento.CLI
    Memento.Commands
  build-depends:
      base
    , memento
    , iCalendar
    , ansi-terminal
    , optparse-applicative
    , http-client
    , http-types
    , data-default
    , time
    , text
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings
